nginx/lb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    k8s-app: nginx
spec:
  replicas: 8
  selector:
    matchLabels:
      name: nginx
  template:
    metadata:
      labels:
        name: nginx
    spec:
      containers:
        - name: debug
          image: nginx:1.19.0
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: config
              subPath: nginx.conf
      volumes:
        - name: config
          configMap:
            name: nginx
---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    name: nginx
spec:
  type: ClusterIP
  selector:
    name: nginx
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/connection-proxy-header: keep-alive
  name: nginx
  namespace: default
spec:
  rules:
    - host: lb.com
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
